force-app/main/default/objects/Contract/fields/Contract_End_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date_Format__c</fullName>
    <description>Used to format the date to MM/DD/YYYY outside of the UI</description>
    <formula>IF( ISBLANK(EndDate), &apos;&apos;, 
TEXT(MONTH( EndDate )) + &quot;/&quot; + TEXT(DAY(EndDate )) + &quot;/&quot; + TEXT(YEAR(EndDate ))
)</formula>
    <inlineHelpText>Used to format the date to MM/DD/YYYY outside of the UI</inlineHelpText>
    <label>Contract End Date Format</label>
    <type>Text</type>
</CustomField>