force-app/main/default/objects/Contract/fields/Contract_Start_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date_Format__c</fullName>
    <description>Used to format the date to MM/DD/YYYY outside of the UI</description>
    <formula>IF( ISBLANK(StartDate), &apos;&apos;, 
TEXT(MONTH( StartDate )) + &quot;/&quot; + TEXT(DAY(StartDate )) + &quot;/&quot; + TEXT(YEAR(StartDate ))
)</formula>
    <inlineHelpText>Used to format the date to MM/DD/YYYY outside of the UI</inlineHelpText>
    <label>Contract Start Date Format</label>
    <type>Text</type>
</CustomField>