force-app/main/default/objects/Contract/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>