force-app/main/default/objects/Contract/validationRules/Require_Signed_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Signed_Fields</fullName>
    <active>true</active>
    <description>When a Contract is Activated, Signed Fields should be Populated</description>
    <errorConditionFormula>TEXT(Status) == &apos;Activated&apos;
&amp;&amp;
(ISBLANK(CustomerSignedId) 
|| ISBLANK(  CustomerSignedDate ) 
|| ISBLANK( CompanySignedId ) 
|| ISBLANK( CompanySignedDate ) 
)</errorConditionFormula>
    <errorDisplayField>CustomerSignedId</errorDisplayField>
    <errorMessage>All Signed by Fields must be populated to Activate</errorMessage>
</ValidationRule>